--- a/TP4b project study.ipynb
+++ b/TP4b project study.ipynb
@@ -6,15 +6,7 @@
    "id": "850121d9",
    "metadata": {},
    "source": [
-    "# GTK performance study\n",
-    "Literature:\n",
-    "- [NA62 detector paper](https://iopscience.iop.org/article/10.1088/1748-0221/12/05/P05025/pdf)\n",
-    "- [K->pinn theoretical overview](https://arxiv.org/pdf/1503.02693.pdf)\n",
-    "- [GTK paper](https://arxiv.org/pdf/1904.12837.pdf)\n",
-    "- [HSF training](https://hsf-training.github.io/analysis-essentials/python/README.html)\n",
-    "- [`ROOT` documentation](https://root.cern/)\n",
-    "- [`uproot` documentation](https://uproot.readthedocs.io/en/latest/)\n",
-    "- [TDCPix design manual (just incase)](https://espace.cern.ch/tdc-pix/Shared%20Documents/20130506TDCpix_design_manual.pdf)"
+    "# GTK performance study"
    ]
   },
   {
