--- a/TP4b_project_study.ipynb
+++ b/TP4b_project_study.ipynb
@@ -12,6 +12,64 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Read this before continuing\n",
+        "This notebook uses `condacolab` package, which simplifies instalation and setup of `ROOT` package. Unfortunately the `condacolab` commands need to be run as the first Code cell!\n",
+        "\n",
+        "Once you run `condacolab.install()`, the Python kernel will be restarted. This is normal and expected. After that, you can continue running the cells below like normal.\n",
+        "\n",
+        "Do not use the `Run all` option. Run the `condacolab` cell individually and wait for the kernel to restart. Only then, you can run all cells if you want."
+      ],
+      "metadata": {
+        "id": "EO9b6LfLUXQc"
+      },
+      "id": "EO9b6LfLUXQc"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load the Drive helper and mount\n",
+        "# Do it once\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# This will prompt for authorization.\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "OcvM0krZUa49"
+      },
+      "id": "OcvM0krZUa49",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -q condacolab\n",
+        "import condacolab\n",
+        "condacolab.install()"
+      ],
+      "metadata": {
+        "id": "9c77JtqdUd2W"
+      },
+      "id": "9c77JtqdUd2W",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!conda install -c conda-forge root"
+      ],
+      "metadata": {
+        "id": "nTDaVbOmUgNm"
+      },
+      "id": "nTDaVbOmUgNm",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "id": "850121d9",
       "metadata": {
         "id": "850121d9"
